handling missing data

--- a/pima_diabetes_assignment.ipynb
+++ b/pima_diabetes_assignment.ipynb
@@ -56,7 +56,7 @@
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
         "trusted": true,
         "id": "BNoPXLp26z6h",
-        "outputId": "c0dc7f8f-b72b-4571-bd79-27a33667ca3f",
+        "outputId": "cede0331-7b84-4d85-a13c-afb86646ba3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -72,10 +72,10 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 8
         }
       ],
-      "execution_count": null
+      "execution_count": 8
     },
     {
       "cell_type": "code",
@@ -83,15 +83,74 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    data.drop('Outcome',axis = 1), data['Outcome'], test_size = 0.2, random_state = 0)\n",
-        "for col in X_train.columns:\n",
-        "    median = data[col].median()\n",
-        "    data[col] = data[col].replace(0, median)"
+        "for col in data.columns:\n",
+        "    print(col, (data[col]==0).sum())"
       ],
       "metadata": {
-        "id": "L1W3uYxJEFlO"
+        "id": "L1W3uYxJEFlO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6638131-47f8-4122-eae0-ca937f3c7ae8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pregnancies 111\n",
+            "Glucose 5\n",
+            "BloodPressure 35\n",
+            "SkinThickness 227\n",
+            "Insulin 374\n",
+            "BMI 11\n",
+            "DiabetesPedigreeFunction 0\n",
+            "Age 0\n",
+            "Outcome 500\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zero_cols = [\"Glucose\",\"BloodPressure\",\"SkinThickness\",\"Insulin\",\"BMI\"]\n",
+        "\n",
+        "# Compute medians from training set only\n",
+        "medians = {}\n",
+        "for col in zero_cols:\n",
+        "    medians[col] = X_train[col].median()\n",
+        "    X_train[col] = X_train[col].replace(0, medians[col])\n",
+        "    X_test[col] = X_test[col].replace(0, medians[col])\n",
+        "\n",
+        "for col in X_train.columns:\n",
+        "    print(col, (data[col]==0).sum())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ryD1W_uuSeJa",
+        "outputId": "309af802-80ba-4f43-eced-d86b2daad651"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pregnancies 111\n",
+            "Glucose 5\n",
+            "BloodPressure 35\n",
+            "SkinThickness 227\n",
+            "Insulin 374\n",
+            "BMI 11\n",
+            "DiabetesPedigreeFunction 0\n",
+            "Age 0\n"
+          ]
+        }
+      ]
     }
   ]
 }
